<resources>
    <string name="app_name">storesale</string>
    <string name="txtNombres">Nombres completos</string>
    <string name="invalid_mail">Ingrese mail valido</string>
    <string name="invalid_password">Ingrese un password mayor a 6 digitos</string>
    <string name="etCorreosession">Ingrese su correo electronico</string>
    <string name="etContraseñasession">Ingrese su contraseña</string>
    <string name="tvInicionsession">INICIO DE SESION</string>
    <string name="ivTienda">Tienda</string>
    <string name="ivMarca">Marca</string>
    <string name="btnEntrar">INGRESAR</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="tvRegistrese">REGISTRESE</string>
    <string name="etCorreo">Correo electronico</string>
    <string name="etContraseña">Contraseña</string>
    <string name="etPais">Seleccione su pais</string>
    <string name="etCiudad">Ciudad</string>
    <string name="etTipo">Seleccione su tipo de usuario</string>
    <string name="etTienda">Tienda</string>
    <string name="btnRegistrarse1">REGISTRARSE</string>
    <string name="btnInicio">Volver al inicio</string>
    <string name="add_product">Agregar producto</string>
    <string name="pick_image">Seleccionar imagen</string>
    <string name="product_name">Nombre producto</string>
    <string name="product_description">Descripcion</string>
    <string name="product_stock">Unidades disponibles</string>
    <string name="product_price">Precio</string>
    <string name="product_category">Categoria</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_newProduc">Nuevo producto</string>
    <string name="btn_EditProduct">Editar producto</string>
    <string name="btn_update">Actualizar</string>
    <string name="btn_menu">Regresar al Menu</string>
</resources>